# netsuite-shim

./: .env.example  .gitignore  README.md  pyproject.toml  simple_test.py
src/netsuite_shim/: __init__.py  _pagination.py  _retry.py  client.py  exceptions.py  models.py
src/netsuite_shim/api/: __init__.py  metadata.py  rest.py  suiteql.py
src/netsuite_shim/auth/: __init__.py  base.py  oauth2.py  tba.py
tests/: conftest.py  test_client.py  test_exceptions.py  test_pagination.py  test_retry.py
tests/test_api/: test_metadata.py  test_rest.py  test_suiteql.py
tests/test_auth/: test_oauth2.py  test_tba.py
